fixed clipping issue with background svgs

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,13 @@
 }
 
 body {
+    position:static;
     background: var(--motif-color);
     font-family: Inter, Arial, Helvetica, sans-serif;
     text-align: left;
     padding: 0;
     margin: 0;
     font-size: 16px;
-    height: 100%;
 }
 
 body .container {
@@ -29,12 +29,13 @@ body .container {
     margin: 0;
     font-size: 16px;
     overflow: hidden;
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
     place-items: center;
 }
 
 .bg_element {
+    overflow: hidden;
     width: 100%;
     height: 100%;
     position: absolute;
